--- a/start.html
+++ b/start.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Second Repo</title>
+    <title>My Second Repo site</title>
 </head>
 <body>
-    <h1>My Second Repo</h1>
+    <h1>My Second Repo practice</h1>
+    <h4>Hey, Look my new blog</h4>
+    <div>
+        <h2>My new blog</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero adipisci incidunt, vitae, eius explicabo veritatis porro laborum dolores officiis blanditiis et placeat qui vero consequuntur nulla? Distinctio est autem reiciendis facilis a esse, deleniti impedit nesciunt quod culpa sint voluptatem.</p>
+    </div>
     <img src="img.jpg" alt="">
 </body>
 </html>
