--- a/start.html
+++ b/start.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>My Second Repo practice</h1>
-    <h4>Hey, Look my new blog</h4>
+    <h4>Hey, Look my new blog.Time to design my blog</h4>
     <div>
         <h2>My new blog</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero adipisci incidunt, vitae, eius explicabo veritatis porro laborum dolores officiis blanditiis et placeat qui vero consequuntur nulla? Distinctio est autem reiciendis facilis a esse, deleniti impedit nesciunt quod culpa sint voluptatem.</p>
